fix hover UX on mobile

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -26,8 +26,10 @@
     transition: background-color 0.3s ease;
     position: relative;
 
-    &:hover {
-        background-color: var(--library_back_color_hover);
+    @media screen and (min-width: 769px) {
+        &:hover {
+            background-color: var(--library_back_color_hover);
+        }
     }
 
     img {
